--- a/smb215/bin/AndroidManifest.xml
+++ b/smb215/bin/AndroidManifest.xml
@@ -7,6 +7,16 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <permission
+    android:name="com.example.smb215.permission.C2D_MESSAGE"
+    android:protectionLevel="signature" />
+<uses-permission android:name="com.example.smb215.permission.C2D_MESSAGE" />
+ 
+<uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+<uses-permission android:name="android.permission.WAKE_LOCK" />
+<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <application
         android:allowBackup="true"
