Add update function

--- a/smb215/bin/AndroidManifest.xml
+++ b/smb215/bin/AndroidManifest.xml
@@ -18,20 +18,37 @@
 <uses-permission android:name="android.permission.WAKE_LOCK" />
 <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
+
+<application
+    android:name=".Common"
+    android:allowBackup="true"
+    android:icon="@drawable/ic_launcher"
+    android:label="@string/app_name"
+    android:theme="@style/AppTheme" >
+    <activity
             android:name="com.example.smb215.MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
+ 
+    <receiver
+        android:name=".client.GcmBroadcastReceiver"
+        android:permission="com.google.android.c2dm.permission.SEND" >
+        <intent-filter>
+            <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            <category android:name="com.appsrox.instachat" />
+        </intent-filter>
+    </receiver>
+    <provider
+    	android:name=".DataProvider"
+    	android:authorities="com.example.smb215.provider"
+    	android:exported="false" >
+	</provider>
+</application>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+
 
 </manifest>
