--- a/smb215/AndroidManifest.xml
+++ b/smb215/AndroidManifest.xml
@@ -39,7 +39,7 @@
         android:permission="com.google.android.c2dm.permission.SEND" >
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            <category android:name="com.appsrox.instachat" />
+            <category android:name="com.example.smb215" />
         </intent-filter>
     </receiver>
     <provider
