--- a/smb215/.project
+++ b/smb215/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>smb215</name>
+	<name>Projetsmb215</name>
 	<comment></comment>
 	<projects>
 	</projects>
