--- a/smb215/AndroidManifest.xml
+++ b/smb215/AndroidManifest.xml
@@ -20,13 +20,13 @@
 
 
 <application
-    android:name=".Common"
+    android:name="com.example.projetsmb215.Common"
     android:allowBackup="true"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/AppTheme" >
     <activity
-            android:name="com.example.smb215.MainActivity"
+            android:name="com.example.projetsmb215.MainActivity"
             android:label="@string/app_name" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,7 @@
         </intent-filter>
     </receiver>
     <provider
-    	android:name=".DataProvider"
+    	android:name="com.example.projetsmb215.DataProvider"
     	android:authorities="com.example.smb215.provider"
     	android:exported="false" >
 	</provider>
