change name project

--- a/smb215/AndroidManifest.xml
+++ b/smb215/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.smb215"
+    package="com.example.projetsmb215"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,9 +9,9 @@
         android:targetSdkVersion="17" />
     
     <permission
-    android:name="com.example.smb215.permission.C2D_MESSAGE"
+    android:name="com.example.projetsmb215.permission.C2D_MESSAGE"
     android:protectionLevel="signature" />
-<uses-permission android:name="com.example.smb215.permission.C2D_MESSAGE" />
+<uses-permission android:name="com.example.projetsmb215.permission.C2D_MESSAGE" />
  
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -20,7 +20,7 @@
 
 
 <application
-    android:name="com.example.projetsmb215.Common"
+    android:name=".Common"
     android:allowBackup="true"
     android:icon="@drawable/ic_launcher"
     android:label="@string/app_name"
@@ -39,12 +39,12 @@
         android:permission="com.google.android.c2dm.permission.SEND" >
         <intent-filter>
             <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-            <category android:name="com.example.smb215" />
+            <category android:name="com.example.projetsmb215" />
         </intent-filter>
     </receiver>
     <provider
-    	android:name="com.example.projetsmb215.DataProvider"
-    	android:authorities="com.example.smb215.provider"
+    	android:name=".DataProvider"
+    	android:authorities="com.example.projetsmb215.provider"
     	android:exported="false" >
 	</provider>
 </application>
