--- a/smb215/project.properties
+++ b/smb215/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.1=../../../../../adt1/adt-bundle-windows-x86/adt-bundle-windows-x86/sdk/extras/google/google_play_services/libproject/google-play-services_lib
